<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/create_question"
        style="@style/HeaderText"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/question_edit_text"
        android:hint="@string/question_field"
        android:maxLength="140"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingRight="2dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/left_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/left_text_answer"
                android:hint="@string/text_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/left_image_answer"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/left_gallery_button"
                    android:src="@drawable/ic_action_picture"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/add_picture" />

                <ImageButton
                    android:id="@+id/left_camera_button"
                    android:src="@drawable/ic_camera_alt"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/add_picture" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingLeft="2dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/right_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/right_text_answer"
                android:hint="@string/text_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/right_image_answer"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/right_gallery_button"
                    android:src="@drawable/ic_action_picture"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/add_picture" />

                <ImageButton
                    android:id="@+id/right_camera_button"
                    android:src="@drawable/ic_camera_alt"
                    android:layout_gravity="center"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:contentDescription="@string/add_picture" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/submit_ask"
        android:text="@string/submit"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>